style: 판매 전략 초기화